# rani

./: Cargo.toml  LICENSE  README.md  anime_page.html  conv.py  decode.sh  output.html  output.txt  test.sh
.github/workflows/: release.yml  rust.yml
src/: decode.rs  main.rs  tests.rs
