[package]
name = "rani"
authors = ["mjh316"]
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "A tool to find and play anime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.21"
reqwest = "0.11.10"
scraper = "0.12.0"
colorful = "0.2.1" 
base64 = "0.13.0"
